# quanbi1

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  STRUCTURE.md  run_yj_studio.py
local/app/: pyproject.toml
local/app/src/yj_studio/: __init__.py  __main__.py  app.py
local/app/tests/: test_active_learning.py  test_ai_adapters.py  test_ai_dock_volume_selection.py  test_algorithms_measure.py  test_algorithms_registry.py  test_algorithms_thickness.py  test_closure_contour.py  test_highlight.py  test_hybrid_volume_store.py  test_imports.py  test_main_window_dock_layout.py  test_mask_volume_renderer.py  test_physical_axes.py  test_property_dock.py  test_remote_sam3_track.py  test_remote_target_store.py  test_reservoir_workbench_entry.py  test_rgt_compose.py  test_sam3_segment_algorithm.py  test_sam3_unified_exit.py  test_sam3_workbench_zoom.py  test_sandbody_extract.py  test_schema_form.py  test_section_service.py  test_target_dock_models.py  test_target_dock_review.py  test_target_frame_editor.py  test_target_stage_pipeline.py  test_target_visualization_dialog.py  test_targets_store.py  test_template_match.py  test_tools.py  test_trap_evaluate.py  test_trap_report.py  test_undo_commands.py  test_view_2d_section_display.py  test_volume_slice_renderer.py  test_well_log_renderer.py  test_well_section_service.py
shared/: pyproject.toml
shared/src/yj_studio_core/: __init__.py  multichannel.py  shapes.py  volume_grid.py
shared/src/yj_studio_core/masks/: __init__.py  sparse.py
shared/src/yj_studio_core/reservoir/: __init__.py  native_render.py  (+1 more)
(+423 files in other folders)
