[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yj-studio-core"
version = "0.1.0"
description = "Shared core models for YJ Studio (used by both the desktop app and the server)."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["src"]
