[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yj-studio"
version = "0.1.0"
description = "Desktop seismic interpretation and trap recognition studio for the YJ block."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "vtk>=9.3",
    "numpy",
    "scipy",
    "pydantic>=2",
    "pyzmq",
]

[project.scripts]
yj-studio = "yj_studio.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../shared/src"]
addopts = "-q -p no:cacheprovider -p no:pytestqt -p no:pytestqt.plugin -p no:qt"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
